--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 stages:
   - name: test
   - name: release
-    if: (branch = master AND type = push) OR (tag IS present)
+    if: (branch = develop AND type = push) OR (tag IS present)
 jobs:
   include:
   - env: MASTER=local
