--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ jobs:
     scala: 2.12.7
   - env: MASTER=standalone STANDALONE_CACHE=$HOME/standalone-stuff
     scala: 2.11.12
+  - env: MASTER=yarn-distrib YARN_CACHE=$HOME/yarn-stuff STANDALONE_CACHE=$HOME/yarn-cache
+    scala: 2.11.12
   - env: MASTER=yarn YARN_CACHE=$HOME/yarn-stuff
     scala: 2.11.12
   - env: MASTER=yarn YARN_CACHE=$HOME/yarn-stuff
