--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,7 @@ jobs:
     scala: 2.12.8
   - stage: release
     script: sbt ci-release
+branches:
+  only:
+  - master
+  - /^v\d+\.\d+.*$/ # tagged versions
