Temporarily disable distribution-based tests
Running into weird CA certificates issues with them:
```
curl: (60) server certificate verification failed. CAfile: /etc/ssl/certs/ca-certificates.crt CRLfile: none
More details here: http://curl.haxx.se/docs/sslcerts.html
curl performs SSL certificate verification by default, using a "bundle"
 of Certificate Authority (CA) public keys (CA certs). If the default
 bundle file isn't adequate, you can specify an alternate file
 using the --cacert option.
If this HTTPS server uses a certificate signed by a CA represented in
 the bundle, the certificate verification probably failed due to a
 problem with the certificate (it might be expired, or the name might
 not match the domain name in the URL).
If you'd like to turn off curl's verification of the certificate, use
 the -k (or --insecure) option.
```
(https://travis-ci.org/github/alexarchambault/ammonite-spark/jobs/692874910#L248-L260)

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ stages:
     if: (branch = master AND type = push) OR (tag IS present)
 jobs:
   include:
-  - env: MASTER=local-distrib
+  # - env: MASTER=local-distrib
   - env: MASTER=local
   - env: MASTER=standalone STANDALONE_CACHE=$HOME/standalone-stuff
-  - env: MASTER=yarn-distrib YARN_CACHE=$HOME/yarn-stuff STANDALONE_CACHE=$HOME/yarn-cache
+  # - env: MASTER=yarn-distrib YARN_CACHE=$HOME/yarn-stuff STANDALONE_CACHE=$HOME/yarn-cache
   - env: MASTER=yarn YARN_CACHE=$HOME/yarn-stuff
   - stage: release
     script: ./sbt ci-release
