--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,1 +1,4 @@
-updates.ignore = [ { groupId = "org.apache.spark", artifactId = "spark-sql" } ]
+updates.ignore = [
+  { groupId = "org.apache.spark", artifactId = "spark-sql" },
+  { groupId = "com.github.plokhotnyuk.jsoniter-scala" }
+]
