--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,9 @@ jobs:
     - run: .github/scripts/gpg-setup.sh
       env:
         PGP_SECRET: ${{ secrets.PUBLISH_SECRET_KEY }}
-    - run: ./mill -i io.kipp.mill.ci.release.ReleaseModule/publishAll
+    - run: ./mill -i publishSonatype __.publishArtifacts
       shell: bash
       env:
         PGP_PASSPHRASE: ${{ secrets.PUBLISH_SECRET_KEY_PASSWORD }}
-        PGP_SECRET: ${{ secrets.PUBLISH_SECRET_KEY }}
         SONATYPE_PASSWORD: ${{ secrets.PUBLISH_PASSWORD }}
         SONATYPE_USERNAME: ${{ secrets.PUBLISH_USER }}
